# robotics-workshop

./: .gitignore  LICENSE  README-robot-temp.md  README.md  host_rtsp_server  host_rtsp_server.c
FastAPI/: hosting_server.py
installation/: installProjectDependencies.sh  installROS2Env.sh  installROS2HumbleEnv.sh  ip_display.py  set_display_IP.md  start_display.sh  stream.sdp  tegra-cam.py
robot_ws/: README.md
robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ws/install/robot_app/share/robot_app/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ros2_csi_camera_publish/share/ros2_csi_camera_publish/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ros2_deep_learning_to_twist_message/share/ros2_deep_learning_to_twist_message/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ros2_gamepad_to_twist_message/share/ros2_gamepad_to_twist_message/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/install/ros2_save_camera_image/share/ros2_save_camera_image/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/src/robot_app/: setup.cfg  setup.py
robot_ws/src/robot_app/launch/: gamepad_launch.py
robot_ws/src/ros2_csi_camera_publish/ros2_csi_camera_publish/: jetson.py
robot_ws/src/ros2_deep_learning_to_twist_message/: setup.py
robot_ws/src/ros2_gamepad_to_twist_message/launch/: launch.py
robot_ws/src/ros2_gamepad_to_twist_message/ros2_gamepad_to_twist_message/: waveshare.py
robot_ws/src/ros2_save_camera_image/: settings.json
robot_ws/src/ros2_save_camera_image/ros2_save_camera_image/: execute.py
robot_ws/src/ros2_twist_message_to_robot_motion/ros2_twist_message_to_robot_motion/: jetbot.py
simulation_ws/: README.md
simulation_ws/src/ros2_deep_learning_to_twist_message/: README.md  package.xml
simulation_ws/src/ros2_deep_learning_to_twist_message/ros2_deep_learning_to_twist_message/: onnx_model.py
simulation_ws/src/ros2_keyboard_to_twist_message/: README.md  package.xml  setup.cfg  setup.py
simulation_ws/src/ros2_keyboard_to_twist_message/ros2_keyboard_to_twist_message/: keyboard_to_twist_function.py
simulation_ws/src/ros2_robot_simulation/: CMakeLists.txt  README.md  package.xml
simulation_ws/src/ros2_robot_simulation/env-hooks/: ros2_robot_simulation.dsv.in
simulation_ws/src/ros2_robot_simulation/launch/: launch.py  spawn.py  states.py
simulation_ws/src/ros2_robot_simulation/models/meshes/: lidar-base.dae
simulation_ws/src/ros2_robot_simulation/models/urdf/: jetbot.gazebo.xacro  jetbot.urdf  jetbot.xml
simulation_ws/src/ros2_robot_simulation/rviz/: jetbot.rviz
simulation_ws/src/ros2_save_camera_image/: README.md
simulation_ws/src/ros2_save_camera_image/ros2_save_camera_image/: execute.py
simulation_ws/src/ros2_world_simulation/: CMakeLists.txt  README.md  package.xml
simulation_ws/src/ros2_world_simulation/env-hooks/: ros2_world_simulation.dsv.in
simulation_ws/src/ros2_world_simulation/launch/: launch.py
simulation_ws/src/ros2_world_simulation/worlds/: racetrack_day.world  racetrack_day_empty.world  racetrack_night.world
simulation_ws/src/simulation_app/: package.xml  setup.cfg  setup.py
simulation_ws/src/simulation_app/launch/: autonomous_launch.py  keyboard_launch.py
src/camera_capture/: package.xml  requiremenst.in  setup.cfg  setup.py
src/camera_capture/camera_capture/: __init__.py  camera_capture.py
src/camera_capture/config/: camera_capture.json  camera_capture_settings.json
src/camera_capture/launch/: camera_capture.launch.py
src/camera_livestream/: package.xml  setup.cfg  setup.py
src/camera_livestream/camera_livestream/: camera_livestream.py  temp.py
src/camera_livestream/config/: camera_livestream_settings.json
src/camera_livestream/launch/: camera_livestream.launch.py
src/camera_snap_shot/: package.xml  setup.cfg  setup.py
src/camera_snap_shot/camera_snap_shot/: take_snap_shot.py
src/camera_snap_shot/config/: camera_snap_shot_settings.json
src/camera_snap_shot/launch/: camera_snap_shot.launch.py
src/robot_app/: package.xml
src/robot_app/launch/: gamepad_launch.py
src/ros2_csi_camera_publish/: README.md  package.xml  settings.json  setup.cfg  setup.py
src/ros2_csi_camera_publish/launch/: main.launch.py
src/ros2_csi_camera_publish/ros2_csi_camera_publish/: jetson.py  photo_mode.py
src/ros2_deep_learning_to_twist_message/: README.md  settings.json  setup.cfg
src/ros2_deep_learning_to_twist_message/launch/: launch.py
src/ros2_gamepad_to_twist_message/: README.md  package.xml  settings.json  setup.cfg  setup.py
src/ros2_gamepad_to_twist_message/ros2_gamepad_to_twist_message/: logitech.py  playstation.py  waveshare.py
src/ros2_save_camera_image/: README.md  package.xml  settings.json  setup.cfg  setup.py
src/ros2_save_camera_image/launch/: launch.py
src/ros2_save_camera_image/ros2_save_camera_image/: cloud.py  execute.py
src/ros2_twist_message_to_robot_motion/: README.md  package.xml  settings.json  setup.cfg  setup.py
src/ros2_twist_message_to_robot_motion/launch/: launch.py
src/ros2_twist_message_to_robot_motion/ros2_twist_message_to_robot_motion/: adafruit.py  jetbot.py
src/ros2_twist_message_validation/: package.xml  setup.cfg  setup.py
src/ros2_twist_message_validation/ros2_twist_message_validation/: validation.py
src/ros_to_api/: package.xml  requirements.in  setup.cfg  setup.py
src/ros_to_api/config/: settings.json
src/ros_to_api/launch/: livestream.launch.py
src/ros_to_api/ros_to_api/: __init__.py  livestream.py
src/ros_to_livestream/: package.xml  requirements.in  setup.cfg  setup.py
src/ros_to_livestream/config/: settings.json  settings.yaml
src/ros_to_livestream/launch/: HSL.launch.py
src/ros_to_livestream/ros_to_livestream/: HSL.py  __init__.py
src/support/: package.xml  setup.cfg  setup.py
src/support/support/: __init__.py  extended_node.py  rclpy_mixin.py
src/support/test/: test_extended_node.py
(+89 files in other folders)
