<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>support</name>
  <version>1.0.0</version>
  <description>Package containing supporting code for use in other ROS packages.</description>
  <maintainer email="wim-peter.dirks@ordina.nl">Wim-Peter Dirks</maintainer>
  <license>MIT License</license>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
