<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_robot_simulation</name>
  <version>1.0.0</version>
  <description>ROS2 robot simulation package</description>
  <maintainer email="animesh.ani@live.com">ANI717 (Animesh Bala Ani)</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ros2_world_simulation</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
